# KKdLib-py

./: .clang-format  .gitignore  meson.build  pyproject.toml
.github/workflows/: build_wheels.yml  cibuildwheel.yml
src/: BC.h  BC3.cpp  BC5.cpp  BC7.cpp  bc5_encode.py  bcn_encode.py  helpers.h  main.cpp
subprojects/: KKdLib.wrap
subprojects/packagefiles/: KKdLib.patch
