[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "KKdLib"
version = "0.1"
requires-python = ">= 3.10"
dependencies = [
  "pillow>=11.3.0"
]

[tool.meson-python]
limited-api = true

[tool.meson-python.args]
install = ['--skip-subprojects']

[tool.cibuildwheel]
skip = "cp3??t-*"
